WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163743
[CSS Parser] Fix region, column and page break parsing
https://bugs.webkit.org/show_bug.cgi?id=163743
Summary
[CSS Parser] Fix region, column and page break parsing
Dave Hyatt
Reported
2016-10-20 11:24:08 PDT
Fix region, column and page break parsing.
Attachments
Patch
(6.77 KB, patch)
2016-10-20 11:26 PDT
,
Dave Hyatt
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2016-10-20 11:26:49 PDT
Created
attachment 292228
[details]
Patch
WebKit Commit Bot
Comment 2
2016-10-20 11:28:02 PDT
Attachment 292228
[details]
did not pass style-queue: ERROR: Source/WebCore/css/parser/CSSParserFastPaths.cpp:603: Line contains only semicolon. If this should be an empty statement, use { } instead. [whitespace/semicolon] [5] ERROR: Source/WebCore/css/parser/CSSParserFastPaths.cpp:609: Line contains only semicolon. If this should be an empty statement, use { } instead. [whitespace/semicolon] [5] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dave Hyatt
Comment 3
2016-10-20 11:38:50 PDT
Landed in
r207629
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug