Source/WebCore/css/parser/CSSPropertyParser.cpp
@@ -266,6 +266,27 @@ RefPtr<CSSValue> CSSPropertyParser::parseSingleValue(CSSPropertyID property, con
     return value;
 }
 
+static bool isLegacyBreakProperty(CSSPropertyID propertyID)
+{
+    switch (propertyID) {
+    case CSSPropertyPageBreakAfter:
+    case CSSPropertyPageBreakBefore:
+    case CSSPropertyPageBreakInside:
+    case CSSPropertyWebkitColumnBreakAfter:
+    case CSSPropertyWebkitColumnBreakBefore:
+    case CSSPropertyWebkitColumnBreakInside:
+#if ENABLE(CSS_REGIONS)
+    case CSSPropertyWebkitRegionBreakAfter:
+    case CSSPropertyWebkitRegionBreakBefore:
+    case CSSPropertyWebkitRegionBreakInside:
+#endif
+        return true;
+    default:
+        break;
+    }
+    return false;
+}
+
 bool CSSPropertyParser::parseValueStart(CSSPropertyID propertyID, bool important)
 {
     if (consumeCSSWideKeyword(propertyID, important))
@@ -277,6 +298,11 @@ bool CSSPropertyParser::parseValueStart(CSSPropertyID propertyID, bool important
     if (isShorthand) {
         // Variable references will fail to parse here and will fall out to the variable ref parser below.
         if (parseShorthand(propertyID, important))
+            return true;
+    } else if (isLegacyBreakProperty(propertyID)) {
+        // FIXME-NEWPARSER: Can turn this into a shorthand once old parser is gone, and then
+        // we don't need the special case.
+        if (consumeLegacyBreakProperty(propertyID, important))
             return true;
     } else {
         RefPtr<CSSValue> parsedValue = parseSingleValue(propertyID);
@@ -4003,8 +4029,10 @@ static inline CSSValueID mapFromPageBreakBetween(CSSValueID value)
 {
     if (value == CSSValueAlways)
         return CSSValuePage;
-    if (value == CSSValueAuto || value == CSSValueAvoid || value == CSSValueLeft || value == CSSValueRight)
+    if (value == CSSValueAuto || value == CSSValueLeft || value == CSSValueRight)
         return value;
+    if (value == CSSValueAvoid)
+        return CSSValueAvoidPage;
     return CSSValueInvalid;
 }
 
@@ -4012,8 +4040,10 @@ static inline CSSValueID mapFromColumnBreakBetween(CSSValueID value)
 {
     if (value == CSSValueAlways)
         return CSSValueColumn;
-    if (value == CSSValueAuto || value == CSSValueAvoid)
+    if (value == CSSValueAuto)
         return value;
+    if (value == CSSValueAvoid)
+        return CSSValueAvoidColumn;
     return CSSValueInvalid;
 }
 
@@ -4022,8 +4052,10 @@ static inline CSSValueID mapFromRegionBreakBetween(CSSValueID value)
 {
     if (value == CSSValueAlways)
         return CSSValueRegion;
-    if (value == CSSValueAuto || value == CSSValueAvoid)
+    if (value == CSSValueAuto)
         return value;
+    if (value == CSSValueAvoid)
+        return CSSValueAvoidRegion;
     return CSSValueInvalid;
 }
 #endif
@@ -4571,13 +4603,6 @@ bool CSSPropertyParser::parseShorthand(CSSPropertyID property, bool important)
         return consumeBorder(important);
     case CSSPropertyBorderImage:
         return consumeBorderImage(property, important);
-    case CSSPropertyPageBreakAfter:
-    case CSSPropertyPageBreakBefore:
-    case CSSPropertyPageBreakInside:
-    case CSSPropertyWebkitColumnBreakAfter:
-    case CSSPropertyWebkitColumnBreakBefore:
-    case CSSPropertyWebkitColumnBreakInside:
-        return consumeLegacyBreakProperty(property, important);
     case CSSPropertyWebkitMaskPosition:
     case CSSPropertyBackgroundPosition: {
         RefPtr<CSSValue> resultX;
